--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <h1>Trang chủ 2</h1>
     <h1>Trang chủ 3</h1>
     <h1>Trang chủ 4</h1>
+    <h1>Trang chủ 4</h1>
+    <h1>Trang chủ 4</h1>
 </body>
 </html>
